# specsanalyzer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.md  cspell.json  pyproject.toml  requirements.txt  setup.py  test.h5  test.tiff
.cspell/: custom-dictionary.txt
.github/workflows/: documentation.yml  linting.yml  pylint.yml  release.yml  testing_coverage.yml  testing_multiversion.yml  update_dependencies.yml
config/: example_config_FHI.yaml  specsanalyzer.yaml
docs/: conf.py  index.rst  requirements.txt
docs/examples/: example.rst
docs/misc/: maintain.rst
docs/specsanalyzer/: config.rst  convert.rst  core.rst  img_tools.rst  io.rst  metadata.rst  settings.rst
docs/specsscan/: core.rst  helpers.rst  io.rst  metadata.rst  settings.rst
specsanalyzer/: __init__.py  config.py  convert.py  core.py  img_tools.py  io.py  settings.py
specsanalyzer/config/: 20221212_config_LACUS.yaml  default.yaml  phoibos150.calib2d
specsscan/: __init__.py  core.py  helpers.py  metadata.py  settings.py
specsscan/config/: NXmpes_arpes_config.json  default.yaml  example_config_FHI.yaml  example_config_FHI.yaml_
src/specsanalyzer/: __init__.py  config.py  convert.py  core.py  img_tools.py  logging.py
src/specsanalyzer/config/: default.yaml
src/specsscan/: __init__.py  core.py  helpers.py  metadata.py
src/specsscan/config/: NXmpes_arpes_config.json  default.yaml  example_config_FHI.yaml
tests/: helpers.py  test_config.py  test_convert.py  test_helpers.py  test_img_tools.py  test_io.py  test_lens_modes.py  test_logging.py  test_metadata.py  test_settings.py  test_specsanalyzer.py  test_specsscan.py  test_specsscan_metadata.py
tests/data/: Scan1496_034.tsv  config.json  config.yaml  phoibos150.calib2d  phoibos_config.json
tests/data/3610/: info.txt
tests/data/3610/AVG/: 000.tsv
tests/data/4450/: scanvector.txt
tests/data/4450/AVG/: 000.tsv  001.tsv  002.tsv  003.tsv  004.tsv  005.tsv  006.tsv  009.tsv  014.tsv
tests/data/4450/RAW/: 000_0001.tsv  (+13 more)
tests/data/Scan_4450/: info.txt
tests/data/config/: config.json  config.yaml
tests/data/dataEPFL/: Import_TrARPES.ipf
tests/data/dataFHI/: Scan1232_converted.tsv  Scan1232_filtered.tsv  Scan1496_010.tsv  phoibos150.calib2d
tests/jupyter/: Data_analyze_Adrien.py  HARMLOADERTESTS.ipynb  phoibosEPFL.txt
tutorial/: 1_specsanalyzer_conversion_examples.ipynb  2_specsscan_example.ipynb  3_specsscan_conversion_to_NeXus.ipynb  4_specsscan_load_sweep_scan.ipynb  conversion_benchmarks.ipynb  convert_file_tests.ipynb  example.ipynb  interpolation_benchmark.ipynb  lensmodes_tests.ipynb  load_sweep_scan.ipynb  phoibos_eln_data.yaml  remove_grid_by_fourier_filtering.ipynb  specscan_conversion_to_NXmpes.ipynb  test.ipynb
(+173 files in other folders)
